Enhancement to ignore W course records if we have an A for the same exact record in the file